<resources>
    <string name="app_name">Task_1_1</string>

    <!--  First fragment  -->
    <string name="fragment1TextViewFirstNameLabel">First name</string>
    <string name="fragment1TextViewLastNameLabel">Last name</string>
    <string name="fragment1TextViewFacultyNumberLabel">Faculty number</string>
    <string name="fragment1TextViewSpecialtyLabel">Speciality</string>
    <string name="fragment1ButtonSubmittLabel">Submit</string>
    <string-array name="fragment1SpinnerSpecialtyEntries">
        <item>Not selected</item>
        <item>BigData</item>
        <item>Internet Engineering</item>
        <item>Electronics</item>
    </string-array>
    <string name="anotherActivityButtonSubmittLabel">Get Marks</string>
    <string name="anotherActivityTextViewGradeLabel">Grade</string>
    <string name="secondAnotherTextViewMarksNumberLabel">Marks Number</string>
    <string name="secondAnotherTextViewSumLabel">Sum</string>
    <string name="secondAnotherTextViewMeanLabel">Mean</string>
    <string name="xxx_label">XXXXXXX</string>
</resources>